--- a/about/site.html
+++ b/about/site.html
@@ -6,7 +6,18 @@
 </script><link id="light-prism-css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.20.0/themes/prism.css" media="(prefers-color-scheme: light)"><link id="dark-prism-css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.20.0/themes/prism-tomorrow.css" media="(prefers-color-scheme: dark)"><link rel="shortcut icon" type="image/svg+xml" href="/images/biqigu.svg"><link rel="mask-icon" href="/images/biqigu.svg" color="#0078E7"><link rel="alternate icon" href="/yun.ico"><link rel="preload" href="/css/hexo-theme-yun.css" as="style"><link rel="preload" href="/js/utils.js" as="script"><link rel="preload" href="/js/hexo-theme-yun.js" as="script"><link rel="prefetch" href="/js/sidebar.js" as="script"><link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin><script id="yun-config">
     const Yun = window.Yun || {};
     window.CONFIG = {"hostname":"zyyyyyih.gitee.io","root":"/","title":"烟雨山河祭","version":"1.3.0","mode":"auto","copycode":true,"anonymous_image":"https://cdn.jsdelivr.net/gh/YunYouJun/cdn/img/avatar/none.jpg","say":{"api":"https://v1.hitokoto.cn","hitokoto":true},"local_search":{"path":"/search.xml"},"fireworks":{"colors":["102, 167, 221","62, 131, 225","33, 78, 194"]}};
-  </script><link rel="stylesheet" href="/css/hexo-theme-yun.css"><script src="/js/utils.js"></script><script src="/js/hexo-theme-yun.js"></script><meta name="description" content="2020.8.28本博客存在以下三个地址早期github zyyyyyih.github.io国内coding qqyet8.coding-pages.com为了国内更好体验的gitee zyyyyyih.gitee.io前两个都通过域名解析绑定了zyyyyyih.top这个域名并且设定了自动识别国内和境外两个线路，分别解析coding和github两条线路，但是国内速度依然堪忧即使尝试了各种cd">
+  </script><link rel="stylesheet" href="/css/hexo-theme-yun.css"><script src="/js/utils.js"></script><script src="/js/hexo-theme-yun.js"></script><script>(function(){
+  var bp = document.createElement('script');
+  var curProtocol = window.location.protocol.split(':')[0];
+  if (curProtocol === 'https') {
+    bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+  }
+  else {
+    bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+  }
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(bp, s);
+})();</script><meta name="description" content="2020.8.28本博客存在以下三个地址早期github zyyyyyih.github.io国内coding qqyet8.coding-pages.com为了国内更好体验的gitee zyyyyyih.gitee.io前两个都通过域名解析绑定了zyyyyyih.top这个域名并且设定了自动识别国内和境外两个线路，分别解析coding和github两条线路，但是国内速度依然堪忧即使尝试了各种cd">
 <meta property="og:type" content="website">
 <meta property="og:title" content="博客历史">
 <meta property="og:url" content="http://zyyyyyih.gitee.io/about/site.html">
